--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,21 @@
     background-image: url("../images/background.png");
     margin: 0 auto;
 }
+.popup {
+    position: absolute;
+    top: 0;
+    margin-left: 500px;
+    width: 300px; 
+    height: 300px;
+    background-color: red;
+    border: 1px solid #000000;
+    box-shadow: 2px 2px 5px black;
+    display: none;
+    z-index: 10000;
+}
+
+#show-player-list {
+    position: absolute;
+    top: 10px; 
+    left: 10px; 
+}
